Kubernetes/eksfg/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 851725578224.dkr.ecr.us-west-2.amazonaws.com/prod/ecr0:latest
          ports:
            - containerPort: 80
